versioned_docs/version-1.3.0/rest-api/schemas/user.schema.mdx
---
id: user
title: "User"
description: ""
sidebar_label: "User"
hide_title: true
schema: true
custom_edit_url: null
---

import DiscriminatorTabs from "@theme/DiscriminatorTabs";
import SchemaItem from "@theme/SchemaItem";
import SchemaTabs from "@theme/SchemaTabs";
import Heading from "@theme/Heading";
import TabItem from "@theme/TabItem";

<Heading
  as={"h1"}
  className={"openapi__heading"}
  children={"User"}
>
</Heading>





<ul>
  <SchemaItem
    collapsible={false}
    name={"realm"}
    required={false}
    schemaName={"string"}
    qualifierMessage={undefined}
    schema={{"type":"string"}}
  >
    
  </SchemaItem><SchemaItem
    collapsible={false}
    name={"realmId"}
    required={false}
    schemaName={"string"}
    qualifierMessage={undefined}
    schema={{"type":"string"}}
  >
    
  </SchemaItem><SchemaItem
    collapsible={false}
    name={"id"}
    required={false}
    schemaName={"string"}
    qualifierMessage={undefined}
    schema={{"type":"string"}}
  >
    
  </SchemaItem><SchemaItem
    collapsible={false}
    name={"firstName"}
    required={false}
    schemaName={"string"}
    qualifierMessage={undefined}
    schema={{"type":"string"}}
  >
    
  </SchemaItem><SchemaItem
    collapsible={false}
    name={"lastName"}
    required={false}
    schemaName={"string"}
    qualifierMessage={undefined}
    schema={{"type":"string"}}
  >
    
  </SchemaItem><SchemaItem
    collapsible={false}
    name={"email"}
    required={false}
    schemaName={"string"}
    qualifierMessage={undefined}
    schema={{"type":"string"}}
  >
    
  </SchemaItem><SchemaItem
    collapsible={false}
    name={"enabled"}
    required={false}
    schemaName={"boolean"}
    qualifierMessage={undefined}
    schema={{"type":"boolean"}}
  >
    
  </SchemaItem><SchemaItem
    collapsible={false}
    name={"createdOn"}
    required={false}
    schemaName={"date-time"}
    qualifierMessage={undefined}
    schema={{"type":"string","format":"date-time"}}
  >
    
  </SchemaItem><SchemaItem
    collapsible={false}
    name={"secret"}
    required={false}
    schemaName={"string"}
    qualifierMessage={undefined}
    schema={{"type":"string"}}
  >
    
  </SchemaItem><SchemaItem
    collapsible={true}
    className={"schemaItem"}
  >
    <details
      style={{}}
      className={"openapi-markdown__details"}
    >
      <summary
        style={{}}
      >
        <span
          className={"openapi-schema__container"}
        >
          <strong
            className={"openapi-schema__property"}
          >
            attributes
          </strong><span
            className={"openapi-schema__name"}
          >
             object
          </span>
        </span>
      </summary><div
        style={{"marginLeft":"1rem"}}
      >
        <SchemaItem
          collapsible={true}
          className={"schemaItem"}
        >
          <details
            style={{}}
            className={"openapi-markdown__details"}
          >
            <summary
              style={{}}
            >
              <span
                className={"openapi-schema__container"}
              >
                <strong
                  className={"openapi-schema__property"}
                >
                  property name*
                </strong><span
                  className={"openapi-schema__name"}
                >
                   string[]
                </span>
              </span>
            </summary><div
              style={{"marginLeft":"1rem"}}
            >
              <li>
                <div
                  style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem","paddingBottom":".5rem"}}
                >
                  Array [
                </div>
              </li><div
                style={{"marginTop":".5rem","marginBottom":".5rem"}}
              >
                
                
                string
                
                
              </div><li>
                <div
                  style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem"}}
                >
                  ]
                </div>
              </li>
            </div>
          </details>
        </SchemaItem>
      </div>
    </details>
  </SchemaItem><SchemaItem
    collapsible={false}
    name={"serviceAccount"}
    required={false}
    schemaName={"boolean"}
    qualifierMessage={undefined}
    schema={{"type":"boolean"}}
  >
    
  </SchemaItem><SchemaItem
    collapsible={false}
    name={"username"}
    required={false}
    schemaName={"string"}
    qualifierMessage={"**Possible values:** `>= 3 characters` and `<= 255 characters`, Value must match regular expression `^(?=[\\p{IsLatin}|\\p{IsCommon}]+$)(?=[^<>&\"'\\s\\v\\h$%!#?§,;:*~/\\\\|^=\\[\\]{}()`\\p{Cntrl}]+$).*$`"}
    schema={{"maxLength":255,"minLength":3,"pattern":"^(?=[\\p{IsLatin}|\\p{IsCommon}]+$)(?=[^<>&\"'\\s\\v\\h$%!#?§,;:*~/\\\\|^=\\[\\]{}()`\\p{Cntrl}]+$).*$","type":"string"}}
  >
    
  </SchemaItem>
</ul>
            